fix: Product 등록, 수정 시, 유효성 검사 및 가독성 리팩토링